tests/integration/formats/text/check.txt
error: class found
1 >| public class Foo
2  | {
3  |     public int Bar { get; set; }
4  |     public void Baz() { }
5 >| }


error: class found
7 | public class Qux { }
    ^~~~~~~~~~~~~~~~~~~~

2 errors in 1 file
